[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Enemy_Basic.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Sprites/Splash.png" type="Texture" id=3]
[ext_resource path="res://Scripts/World.gd" type="Script" id=4]
[ext_resource path="res://Resources/MenuFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=8]
[ext_resource path="res://Resources/MenuButton.tres" type="StyleBox" id=9]
[ext_resource path="res://Resources/MenuButtonHover.tres" type="StyleBox" id=10]

[node name="Root" type="Node2D"]

[node name="World" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Player" parent="World" instance=ExtResource( 1 )]

[node name="TestEnemy" parent="World" instance=ExtResource( 2 )]
position = Vector2( 688.994, -22.6972 )
goal = NodePath("../Player")

[node name="Menu" type="Sprite" parent="."]
pause_mode = 2
texture = ExtResource( 3 )
script = ExtResource( 8 )

[node name="MenuCamera" type="Camera2D" parent="Menu"]
current = true

[node name="Play" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.838
anchor_right = 0.5
anchor_bottom = 0.838
margin_left = -1109.76
margin_top = -575.0
margin_right = -809.756
margin_bottom = -505.0
custom_styles/hover = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 7 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.93
anchor_right = 0.5
anchor_bottom = 0.93
margin_left = -1110.0
margin_top = -575.0
margin_right = -810.0
margin_bottom = -505.0
custom_styles/hover = ExtResource( 10 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 7 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Menu"]
[connection signal="pressed" from="Menu/Play" to="Menu" method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Quit" to="Menu" method="_on_Quit_pressed"]
